Fixed logo resizing issues on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -48,3 +48,10 @@
   margin: 0 auto;
   display: block;
 }
+
+@media (max-width: 996px) {
+  .logo {
+    padding: 8px;
+    height: 72px;
+  }
+}
